# Murmur

./: .gitignore  BACKLOG.md  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: release.yaml  release.yml  test.yaml
murmur/: murmur.spec  pyproject.toml  run.py  runtime_hook_tkinter.py
murmur-mcp/: pyproject.toml
murmur-mcp/murmur_mcp/: ipc_client.py  main.py
murmur-mcp/src/murmur_mcp/: log.py
murmur-mcp/tests/: test_main.py
murmur/murmur/: audio.py  config.py  hotkey.py  inject.py  ipc.py  main.py  overlay.py  settings_dialog.py  transcribe.py  tray.py  wakeword.py
murmur/src/murmur/: audio.py  config.py  cuda_installer.py  inject.py  ipc.py  log.py  main.py  overlay.py  settings_dialog.py  transcribe.py  tray.py  wakeword.py  wakeword_installer.py
murmur/src/murmur_mcp/: ipc_client.py  main.py
murmur/tests/: test_main.py
