[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "murmur"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper",
    "sounddevice",
    "numpy",
    "pynput",
    "pystray",
    "Pillow",
    "pyautogui; sys_platform == 'win32'",
    "pyperclip; sys_platform == 'win32'",
    "pywin32; sys_platform == 'win32'",
]

[project.scripts]
murmur = "murmur.main:main"
